{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 23,
  "lineage": "eb860474-44d0-25de-f577-a24a0bcee2db",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:route-table/rtb-0413d2f0509a94da7",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-01b87b583f5a1b966",
                "route_table_id": "rtb-0413d2f0509a94da7",
                "subnet_id": "subnet-0d1e4e2b454791962"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0cea698b2c1ac6a16",
                "route_table_id": "rtb-0413d2f0509a94da7",
                "subnet_id": "subnet-0d881abce6a498f39"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-00ad4bc5ce7536dc0",
                "route_table_id": "rtb-0413d2f0509a94da7",
                "subnet_id": "subnet-0091602e5b14b1edf"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-00d538cba6378a78d",
                "route_table_id": "rtb-0413d2f0509a94da7",
                "subnet_id": "subnet-0eabadc447429f60b"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-084d08a816af5aef0",
                "route_table_id": "rtb-0413d2f0509a94da7",
                "subnet_id": "subnet-0d2b56f7082ff03a2"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-09d1844150614d4e2",
                "route_table_id": "rtb-0413d2f0509a94da7",
                "subnet_id": "subnet-0e76142ed9f322ef7"
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "redewordpressturbinado-route"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-0413d2f0509a94da7",
            "owner_id": "348342705419",
            "region": "us-east-1",
            "route_table_id": "rtb-0413d2f0509a94da7",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-083086ec4eac9f0df"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000e35869ff3e49b7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-055fa0882769e9fc8",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "redewordpressturbinado-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcfeefda10ee0977"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "ec2_wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:security-group/sg-050cb6fd07e50fe0c",
            "description": "Allow SSH, HTTP, and Node Exporter inbound traffic",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "allow_ssh_http_node"
                ]
              }
            ],
            "id": "sg-050cb6fd07e50fe0c",
            "name": "pemitir ssh, http, no",
            "region": "us-east-1",
            "tags": {
              "Name": "allow_ssh_http_node"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcfeefda10ee0977"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:vpc/vpc-0fcfeefda10ee0977",
            "cidr_block": "172.16.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0fd29c0fe47efac18",
                "cidr_block": "172.16.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0827c60b07eee0d07",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fcfeefda10ee0977",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0206edac5747b22cf",
            "ipv6_cidr_block": "2600:1f18:e6:e100::/56",
            "main_route_table_id": "rtb-0a364020de8a3ddd9",
            "owner_id": "348342705419",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpressrede-publica"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae375b7ab70cd4e1",
            "arn": "arn:aws:ec2:us-east-1:348342705419:elastic-ip/eipalloc-0ae375b7ab70cd4e1",
            "association_id": "eipassoc-0f0b8943c8049577e",
            "domain": "vpc",
            "id": "eipalloc-0ae375b7ab70cd4e1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0de5af1c1cb2dc3e5",
            "private_dns": "ip-10-0-0-192.ec2.internal",
            "private_ip": "10.0.0.192",
            "public_dns": "ec2-54-197-168-102.compute-1.amazonaws.com",
            "public_ip": "54.197.168.102",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat-eip-privada"
            },
            "tags_all": {
              "Name": "nat-eip-privada"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_private",
            "aws_vpc.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:internet-gateway/igw-0c6acb5ac2133d46f",
            "id": "igw-0c6acb5ac2133d46f",
            "owner_id": "348342705419",
            "region": "us-east-1",
            "tags": {
              "Name": "igw-vpc-privada"
            },
            "tags_all": {
              "Name": "igw-vpc-privada"
            },
            "vpc_id": "vpc-0c17b35d01b1a011f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae375b7ab70cd4e1",
            "association_id": "eipassoc-0f0b8943c8049577e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-08ebe0db923eb9f58",
            "network_interface_id": "eni-0de5af1c1cb2dc3e5",
            "private_ip": "10.0.0.192",
            "public_ip": "54.197.168.102",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01edc7681e7031bb7",
            "tags": {
              "Name": "nat-gw-privada"
            },
            "tags_all": {
              "Name": "nat-gw-privada"
            },
            "vpc_id": "vpc-0c17b35d01b1a011f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_private",
            "aws_subnet.nat_subnet",
            "aws_vpc.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "publica_to_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0413d2f0509a94da7179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0413d2f0509a94da7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-083086ec4eac9f0df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0413d2f0509a94da7"
          },
          "dependencies": [
            "aws_vpc.private",
            "aws_vpc_peering_connection.peer",
            "data.aws_route_table.publica",
            "data.aws_vpc.publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:route-table/rtb-08daaeb5b7ffb600c",
            "id": "rtb-08daaeb5b7ffb600c",
            "owner_id": "348342705419",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c6acb5ac2133d46f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-nat-subnet"
            },
            "tags_all": {
              "Name": "rt-nat-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c17b35d01b1a011f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "rtb-08daaeb5b7ffb600c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw_private",
            "aws_vpc.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:route-table/rtb-09aba99b2f32e3bfd",
            "id": "rtb-09aba99b2f32e3bfd",
            "owner_id": "348342705419",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08ebe0db923eb9f58",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-083086ec4eac9f0df"
              }
            ],
            "tags": {
              "Name": "rt-privada"
            },
            "tags_all": {
              "Name": "rt-privada"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c17b35d01b1a011f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "rtb-09aba99b2f32e3bfd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_private",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.nat_subnet",
            "aws_vpc.private",
            "aws_vpc_peering_connection.peer",
            "data.aws_vpc.publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036626e17e11c5a4b",
            "region": "us-east-1",
            "route_table_id": "rtb-08daaeb5b7ffb600c",
            "subnet_id": "subnet-01edc7681e7031bb7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_private",
            "aws_route_table.rt_nat",
            "aws_subnet.nat_subnet",
            "aws_vpc.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privada_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0ce8e4372adc013",
            "region": "us-east-1",
            "route_table_id": "rtb-09aba99b2f32e3bfd",
            "subnet_id": "subnet-07d228628b32922ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_private",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.rt_privada",
            "aws_subnet.nat_subnet",
            "aws_subnet.privada_1",
            "aws_vpc.private",
            "aws_vpc_peering_connection.peer",
            "data.aws_vpc.publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privada_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6ac5f91a8d56b7e",
            "region": "us-east-1",
            "route_table_id": "rtb-09aba99b2f32e3bfd",
            "subnet_id": "subnet-09cae9dd3707f7e36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_private",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.rt_privada",
            "aws_subnet.nat_subnet",
            "aws_subnet.privada_2",
            "aws_vpc.private",
            "aws_vpc_peering_connection.peer",
            "data.aws_vpc.publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privada_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06acc4d2c448b98a4",
            "region": "us-east-1",
            "route_table_id": "rtb-09aba99b2f32e3bfd",
            "subnet_id": "subnet-0406efcb9da34e6fa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_private",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.rt_privada",
            "aws_subnet.nat_subnet",
            "aws_subnet.privada_3",
            "aws_vpc.private",
            "aws_vpc_peering_connection.peer",
            "data.aws_vpc.publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:security-group/sg-01fbcfed724347606",
            "description": "Allow MySQL from EC2 instances via VPC Peering",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fbcfed724347606",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "MySQL from EC2 VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_rds_from_ec2",
            "name_prefix": "",
            "owner_id": "348342705419",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_rds"
            },
            "tags_all": {
              "Name": "allow_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c17b35d01b1a011f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "sg-01fbcfed724347606",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:subnet/subnet-01edc7681e7031bb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01edc7681e7031bb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348342705419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-nat-publica"
            },
            "tags_all": {
              "Name": "subnet-nat-publica"
            },
            "vpc_id": "vpc-0c17b35d01b1a011f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "subnet-01edc7681e7031bb7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privada_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:subnet/subnet-07d228628b32922ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d228628b32922ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348342705419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-privada-1"
            },
            "tags_all": {
              "Name": "subnet-privada-1"
            },
            "vpc_id": "vpc-0c17b35d01b1a011f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "subnet-07d228628b32922ef",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privada_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:subnet/subnet-09cae9dd3707f7e36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cae9dd3707f7e36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348342705419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-privada-2"
            },
            "tags_all": {
              "Name": "subnet-privada-2"
            },
            "vpc_id": "vpc-0c17b35d01b1a011f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "subnet-09cae9dd3707f7e36",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privada_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:subnet/subnet-0406efcb9da34e6fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0406efcb9da34e6fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348342705419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-privada-3"
            },
            "tags_all": {
              "Name": "subnet-privada-3"
            },
            "vpc_id": "vpc-0c17b35d01b1a011f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "subnet-0406efcb9da34e6fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348342705419:vpc/vpc-0c17b35d01b1a011f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06af0c90f62cf5503",
            "default_route_table_id": "rtb-062ca2db0bf860579",
            "default_security_group_id": "sg-02d29605b6bf681ff",
            "dhcp_options_id": "dopt-0827c60b07eee0d07",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c17b35d01b1a011f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062ca2db0bf860579",
            "owner_id": "348342705419",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-privada-wordpress"
            },
            "tags_all": {
              "Name": "vpc-privada-wordpress"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "348342705419",
            "id": "vpc-0c17b35d01b1a011f",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-083086ec4eac9f0df",
            "peer_owner_id": "348342705419",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0c17b35d01b1a011f",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "peering-publica-privada"
            },
            "tags_all": {
              "Name": "peering-publica-privada"
            },
            "vpc_id": "vpc-0fcfeefda10ee0977"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.private",
            "data.aws_vpc.publica"
          ]
        }
      ]
    }
  ]
}